udpate: system name & ui

--- a/src/app.html
+++ b/src/app.html
@@ -43,7 +43,7 @@
 			})();
 		</script>
 
-		<title>IT/HR RAG Service</title>
+		<title>Munir - MBZUAI HR LLM Service</title>
 
 		%sveltekit.head%
 	</head>
