--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ if(location.host.indexOf('model.georgia') >= 0) {
 </script>
 <meta charset="utf-8">
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<title>Open WebUI Projects</title>
+<title>Projects</title>
 <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
