chore: update Open WebUI references to Cerebrum LLM WebUI

--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 		<link
 			rel="search"
 			type="application/opensearchdescription+xml"
-			title="Open WebUI"
+			title="Cerebrum LLM UI"
 			href="/opensearch.xml"
 		/>
 
@@ -50,7 +50,7 @@
 			})();
 		</script>
 
-		<title>Open WebUI</title>
+		<title>Cerebrum LLM UI</title>
 
 		%sveltekit.head%
 	</head>
