fix: logo image

--- a/src/app.html
+++ b/src/app.html
@@ -72,12 +72,11 @@
 				style="
 					position: absolute;
 					width: 6rem;
-					height: 6rem;
 					top: 46%;
 					left: 50%;
 					margin: -40px 0 0 -40px;
 				"
-				src="/logo-main.svg"
+				src="/logo-main.png"
 			/>
 
 			<!-- <span style="position: absolute; bottom: 32px; left: 50%; margin: -36px 0 0 -36px">
