--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 		<link
 			rel="search"
 			type="application/opensearchdescription+xml"
-			title="Open WebUI"
+			title="YUBB UI"
 			href="/opensearch.xml"
 		/>
 
@@ -59,7 +59,15 @@
 
 		<div
 			id="splash-screen"
-			style="position: fixed; z-index: 100; top: 0; left: 0; width: 100%; height: 100%"
+			style="
+				position: fixed;
+				z-index: 100;
+				background: #fff;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+			"
 		>
 			<style type="text/css" nonce="">
 				html {
@@ -75,8 +83,6 @@
 					top: 46%;
 					left: 50%;
 					margin: -40px 0 0 -40px;
-					border-radius: 50%;
-					overflow: hidden;
 				"
 				src="/favicon.png"
 			/>
@@ -87,20 +93,3 @@
 		</div>
 	</body>
 </html>
-
-<style type="text/css" nonce="">
-	html {
-		overflow-y: hidden !important;
-	}
-
-	#splash-screen {
-		background: #fff;
-	}
-	html.dark #splash-screen {
-		background: #000;
-	}
-
-	html.dark #splash-screen img {
-		filter: invert(1);
-	}
-</style>
