--- a/src/app.html
+++ b/src/app.html
@@ -83,6 +83,8 @@
 					top: 46%;
 					left: 50%;
 					margin: -40px 0 0 -40px;
+					border-radius: 50%;
+					overflow: hidden;
 				"
 				src="/favicon.png"
 			/>
