--- a/src/app.html
+++ b/src/app.html
@@ -43,7 +43,7 @@
 			})();
 		</script>
 
-		<title>HR Assistant Chatbot</title>
+		<title>MBZUAI ServiceDesk Chatbot</title>
 
 		%sveltekit.head%
 	</head>
