--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 
   <div id="allReposPresent" style="display:none">
-    <h2>Model.earth Repos</h2>
+    <h2>Model.earth repos</h2>
     All repos above are present. Github source files: <a href="https://github.com/ModelEarth?tab=repositories">github.com/modelearth</a></div>
   <br>
 
@@ -144,7 +144,6 @@ document.addEventListener("DOMContentLoaded", function() {
     <a href="/localsite/start/steps/">Refresh your local repos</a> for the latest updates.<br><br>
   </div>
 
-  Our Goal: To create online experiences we enjoy beyond our initial involvement. <!--a href="/community/projects/">Moonshots</a-->
 
 </div>
 
