--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@ img {
 <body>
 
 <div class="content contentpadding">
-  <a href="./">Projects</a> - 
+  <a href="./">Active Projects</a> - 
   <a href="https://github.com/modelearth/projects/">Our GitHub Fork</a>
 
   <div id="locationDiv"></div>
