--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<link rel="stylesheet" href="https://model.earth/localsite/css/base.css" id="/localsite/css/base.css" />
 <script type="text/javascript" src="https://model.earth/localsite/js/localsite.js?showheader=true"></script>
 
 <!--
