--- a/src/app.html
+++ b/src/app.html
@@ -1,96 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link rel="manifest" href="%sveltekit.assets%/manifest.json" crossorigin="use-credentials" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-		<meta name="robots" content="noindex,nofollow" />
-		<link
-			rel="search"
-			type="application/opensearchdescription+xml"
-			title="Open WebUI"
-			href="/opensearch.xml"
-		/>
 
-		<script>
-			function resizeIframe(obj) {
-				obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
-			}
-		</script>
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+	<link rel="manifest" href="%sveltekit.assets%/manifest.json" crossorigin="use-credentials" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+	<meta name="robots" content="noindex,nofollow" />
+	<link rel="search" type="application/opensearchdescription+xml" title="Open WebUI" href="/opensearch.xml" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 
-		<script>
-			// On page load or when changing themes, best to add inline in `head` to avoid FOUC
-			(() => {
-				if (localStorage?.theme && localStorage?.theme.includes('oled')) {
-					document.documentElement.style.setProperty('--color-gray-900', '#000000');
-					document.documentElement.style.setProperty('--color-gray-950', '#000000');
-					document.documentElement.classList.add('dark');
-				} else if (
-					localStorage.theme === 'light' ||
-					(!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: light)').matches)
-				) {
-					document.documentElement.classList.add('light');
-				} else if (localStorage.theme && localStorage.theme !== 'system') {
-					localStorage.theme.split(' ').forEach((e) => {
-						document.documentElement.classList.add(e);
-					});
-				} else if (localStorage.theme && localStorage.theme === 'system') {
-					systemTheme = window.matchMedia('(prefers-color-scheme: dark)').matches;
-					document.documentElement.classList.add(systemTheme ? 'dark' : 'light');
-				} else if (localStorage.theme && localStorage.theme === 'her') {
-					document.documentElement.classList.add('dark');
-					document.documentElement.classList.add('her');
-				} else {
-					document.documentElement.classList.add('dark');
-				}
+	<script>
+		function resizeIframe(obj) {
+			obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
+		}
+	</script>
 
-				window.matchMedia('(prefers-color-scheme: dark)').addListener((e) => {
-					if (localStorage.theme === 'system') {
-						if (e.matches) {
-							document.documentElement.classList.add('dark');
-							document.documentElement.classList.remove('light');
-						} else {
-							document.documentElement.classList.add('light');
-							document.documentElement.classList.remove('dark');
-						}
-					}
+	<script>
+		// On page load or when changing themes, best to add inline in `head` to avoid FOUC
+		(() => {
+			if (localStorage?.theme && localStorage?.theme.includes('oled')) {
+				document.documentElement.style.setProperty('--color-gray-900', '#000000');
+				document.documentElement.style.setProperty('--color-gray-950', '#000000');
+				document.documentElement.classList.add('dark');
+			} else if (
+				localStorage.theme === 'light' ||
+				(!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: light)').matches)
+			) {
+				document.documentElement.classList.add('light');
+			} else if (localStorage.theme && localStorage.theme !== 'system') {
+				localStorage.theme.split(' ').forEach((e) => {
+					document.documentElement.classList.add(e);
 				});
-			})();
-		</script>
+			} else if (localStorage.theme && localStorage.theme === 'system') {
+				systemTheme = window.matchMedia('(prefers-color-scheme: dark)').matches;
+				document.documentElement.classList.add(systemTheme ? 'dark' : 'light');
+			} else if (localStorage.theme && localStorage.theme === 'her') {
+				document.documentElement.classList.add('dark');
+				document.documentElement.classList.add('her');
+			} else {
+				document.documentElement.classList.add('dark');
+			}
 
-		<title>Open WebUI</title>
-
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-
-		<div
-			id="splash-screen"
-			style="position: fixed; z-index: 100; top: 0; left: 0; width: 100%; height: 100%"
-		>
-			<style type="text/css" nonce="">
-				html {
-					overflow-y: scroll !important;
+			window.matchMedia('(prefers-color-scheme: dark)').addListener((e) => {
+				if (localStorage.theme === 'system') {
+					if (e.matches) {
+						document.documentElement.classList.add('dark');
+						document.documentElement.classList.remove('light');
+					} else {
+						document.documentElement.classList.add('light');
+						document.documentElement.classList.remove('dark');
+					}
 				}
-			</style>
+			});
+		})();
+	</script>
 
-			<img
-				id="logo"
-				style="
+	<title>Open WebUI</title>
+
+	%sveltekit.head%
+</head>
+
+<body data-sveltekit-preload-data="hover">
+	<div style="display: contents">%sveltekit.body%</div>
+
+	<div id="splash-screen" style="position: fixed; z-index: 100; top: 0; left: 0; width: 100%; height: 100%">
+		<style type="text/css" nonce="">
+			html {
+				overflow-y: scroll !important;
+			}
+		</style>
+
+		<img id="logo" style="
 					position: absolute;
 					width: 6rem;
 					height: 6rem;
 					top: 41%;
 					left: 50%;
 					margin-left: -3rem;
-				"
-				src="/logo.svg"
-			/>
+				" src="/logo.svg" />
 
-			<div
-				style="
+		<div style="
 					position: absolute;
 					top: 33%;
 					left: 50%;
@@ -101,47 +93,35 @@
 					display: flex;
 					flex-direction: column;
 					align-items: center;
-				"
-			>
-				<img
-					id="logo-her"
-					style="width: 13rem; height: 13rem"
-					src="/logo.svg"
-					class="animate-pulse-fast"
-				/>
+				">
+			<img id="logo-her" style="width: 13rem; height: 13rem" src="/logo.svg" class="animate-pulse-fast" />
 
-				<div style="position: relative; width: 24rem; margin-top: 0.5rem">
-					<div
-						id="progress-background"
-						style="
+			<div style="position: relative; width: 24rem; margin-top: 0.5rem">
+				<div id="progress-background" style="
 							position: absolute;
 							width: 100%;
 							height: 0.75rem;
 
 							border-radius: 9999px;
 							background-color: #fafafa9a;
-						"
-					></div>
+						"></div>
 
-					<div
-						id="progress-bar"
-						style="
+				<div id="progress-bar" style="
 							position: absolute;
 							width: 0%;
 							height: 0.75rem;
 							border-radius: 9999px;
 							background-color: #fff;
-						"
-						class="bg-white"
-					></div>
-				</div>
+						" class="bg-white"></div>
 			</div>
+		</div>
 
-			<!-- <span style="position: absolute; bottom: 32px; left: 50%; margin: -36px 0 0 -36px">
+		<!-- <span style="position: absolute; bottom: 32px; left: 50%; margin: -36px 0 0 -36px">
 				Footer content
 			</span> -->
-		</div>
-	</body>
+	</div>
+</body>
+
 </html>
 
 <style type="text/css" nonce="">
@@ -152,6 +132,7 @@
 	#splash-screen {
 		background: #fff;
 	}
+
 	html.dark #splash-screen {
 		background: #000;
 	}
@@ -208,6 +189,7 @@
 			opacity: 0.65;
 		}
 	}
+
 	.animate-pulse-fast {
 		animation: pulse 1.5s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 	}
