--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 		<link
 			rel="search"
 			type="application/opensearchdescription+xml"
-			title="YUBB UI"
+			title="Yubb Chat"
 			href="/opensearch.xml"
 		/>
 
@@ -59,7 +59,7 @@
 			})();
 		</script>
 
-		<title>YUBB UI</title>
+		<title>Yubb Chat</title>
 
 		%sveltekit.head%
 	</head>
