Show setup steps on src page

--- a/location/index.html
+++ b/location/index.html
@@ -22,7 +22,7 @@ loadMarkdown("README.md", "readmeDiv", "_parent");
 </head>
 
 <body>
-<div class="content contentpadding large-list">
+<div class="content contentpadding">
   <div id="readmeDiv"></div>
 </div>
 </body>
