--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <script>
 if(typeof param=='undefined'){ var param={}; }
 // From root since base href is set to ../ above
-loadMarkdown("src/README.md", "locationDiv", "_parent");
+loadMarkdown("location/README.md", "locationDiv", "_parent");
 loadMarkdown("README.md", "readmeDiv", "_parent");
 //loadMarkdown("README-better-layout.md", "readmeDiv", "_parent");
 </script>
@@ -33,7 +33,6 @@ img {
 <body>
 
 <div class="content contentpadding">
-  <a href="./">Active Projects</a>
   <a href="https://github.com/modelearth/projects/" style="float:right">Our GitHub Fork</a>
 
   <div id="locationDiv"></div>
