--- a/src/app.html
+++ b/src/app.html
@@ -87,6 +87,7 @@
 					height: 6rem;
 					top: 44%;
 					left: 50%;
+					border-radius: 50%;
 					transform: translateX(-50%);
 				"
 				src="/static/splash.png"
@@ -108,7 +109,7 @@
 			>
 				<img
 					id="logo-her"
-					style="width: auto; height: 13rem"
+					style="width: auto; height: 13rem; border-radius: 50%"
 					src="/static/splash.png"
 					class="animate-pulse-fast"
 				/>
