Split off Docker install steps

--- a/location/setup/docker/index.html
+++ b/location/setup/docker/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<title>Location - Dev Setup</title>
+<title>Location - Docker Setup</title>
 <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
