feat: annual leave form ui

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,11 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" crossorigin="use-credentials" />
+		<!-- SMUI Styles -->
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/svelte-material-ui@7.0.0/bare.min.css"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 		<meta name="robots" content="noindex,nofollow" />
 		<script>
