--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 		<link
 			rel="search"
 			type="application/opensearchdescription+xml"
-			title="Open WebUI"
+			title="RaphAI"
 			href="/opensearch.xml"
 		/>
 
@@ -61,7 +61,7 @@
 			})();
 		</script>
 
-		<title>Open WebUI</title>
+		<title>RaphAI</title>
 
 		%sveltekit.head%
 	</head>
