--- a/src/app.html
+++ b/src/app.html
@@ -4,8 +4,11 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" crossorigin="use-credentials" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, viewport-fit=cover, maximum-scale=1" />
 		<meta name="robots" content="noindex,nofollow" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-touch-icon" href="%sveltekit.assets%/logo.png">
 		<link
 			rel="search"
 			type="application/opensearchdescription+xml"
@@ -148,8 +151,12 @@
 </html>
 
 <style type="text/css" nonce="">
-	html {
-		overflow-y: hidden !important;
+	html, body {
+		position: fixed;
+		overflow-y: hidden;
+		height: 100%;
+		width: 100%;
+		background: #171717;
 	}
 
 	#splash-screen {
